--- a/templates/locales/ja.json
+++ b/templates/locales/ja.json
@@ -14,7 +14,8 @@
     "item4": "ファイルの内容から使われている言語を推測して、その言語に最適な方法でインデックス化します (現在のバージョンでは英語と日本語に対応しています)",
     "item5": "ドキュメントをローカルディスクのどこに置いても、捕捉して検索可能にします (監視対象パスを事前に設定しておく必要があります)",
     "item6": "プロジェクトフォルダーや他の関係のあるファイルのそばにドキュメントを置いてください。どこに置いたか覚えておく必要はありません。検索して簡単に見つけられます",
-    "item7": "見つけたファイルはお好きなエディターで開いてください"
+    "item7": "見つけたファイルはお好きなエディターで開いてください",
+    "item8": "Jomaiはあなたのデータを外部に送信しません。あなたのコンピューター内ですべて処理します。(新しいバージョンの確認とダウンロードは除く)"
   },
   "futurePlans": {
     "title": "将来の開発予定",
