--- a/templates/locales/en.json
+++ b/templates/locales/en.json
@@ -14,7 +14,8 @@
     "item4": "Guesses the language used from the file content and indexes it best for that language (English and Japanese are supported in the current version).",
     "item5": "Captures and makes documents searchable anywhere on the local disk (requires preconfigured monitored paths).",
     "item6": "Place the document near your project folder or other related files. There is no need to remember where you put them. You can easily find them by searching.",
-    "item7": "Open the file you found in your favorite editor."
+    "item7": "Open the file you found in your favorite editor.",
+    "item8": "Jomai does not transmit your data externally. Everything is handled within your computer. (except for checking and downloading new versions)"
   },
   "futurePlans": {
     "title": "Future development plans",
