--- a/templates/locales/ja.json
+++ b/templates/locales/ja.json
@@ -3,7 +3,7 @@
   "description": "Jomai(ジョーマイ)はMarkdownファイルに特化したデスクトップサーチシステムです",
   "overview": {
     "title": "Markdownファイルを瞬時に検索",
-    "description": "JomaiはあなたのコンピューターにあるMarkdownドキュメントをインデックス化し検索可能にします。ひとたびインデックス化されれば、Jomaiの最適化された検索機能によりドキュメントを簡単に見つけられるようになります。もうドキュメントを置く場所に悩むことはありません。とにかく書いて、必要になったら検索してさっと見つけられます。",
+    "description": "JomaiはあなたのコンピューターにあるMarkdownドキュメントをインデックス化し検索可能にします。ひとたびインデックス化されれば、Jomaiの最適化された検索機能によりドキュメントを簡単に見つけられます。もうドキュメントを置く場所に悩むことはありません。とにかく書いて、必要になったら検索してさっと見つけられます。",
     "image1": "screenshot-main-light-ja.png"
   },
   "features": {
