--- a/templates/locales/ja.json
+++ b/templates/locales/ja.json
@@ -15,7 +15,8 @@
     "item5": "ドキュメントをローカルディスクのどこに置いても、捕捉して検索可能にします (監視対象パスを事前に設定しておく必要があります)",
     "item6": "プロジェクトフォルダーや他の関係のあるファイルのそばにドキュメントを置いてください。どこに置いたか覚えておく必要はありません。検索して簡単に見つけられます",
     "item7": "見つけたファイルはお好きなエディターで開いてください",
-    "item8": "Jomaiはあなたのデータを外部に送信しません。あなたのコンピューター内ですべて処理します。(新しいバージョンの確認とダウンロードは除く)"
+    "item8": "Jomaiはあなたのデータを外部に送信しません。あなたのコンピューター内ですべて処理します (新しいバージョンの確認とダウンロードは除く)",
+    "item9": "簡単にアンインストールできます。インストールしたアプリケーションとデータフォルダー (/Users/<あなたのホーム>/Library/Application Support/app.jomai.jomai) を削除するだけです"
   },
   "futurePlans": {
     "title": "将来の開発予定",
