--- a/templates/locales/en.json
+++ b/templates/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "lang": "en",
   "title": "Jomai",
   "description": "Jomai is a desktop search system specialized for Markdown files",
   "overview": {
