--- a/templates/locales/en.json
+++ b/templates/locales/en.json
@@ -1,7 +1,7 @@
 {
   "lang": "en",
   "title": "Jomai",
-  "description": "Jomai is a desktop search system specialized for Markdown files",
+  "description": "Jomai is a desktop search system specialized for Markdown files.",
   "overview": {
     "title": "Instantly search Markdown files",
     "description": "Jomai indexes and makes searchable the Markdown documents on your computer. Once indexed, Jomai's optimized search function makes it easy to find your documents. No more worrying about where to put your documents. Just write it down, and you can quickly search and find it when you need it.",
