--- a/templates/locales/ja.json
+++ b/templates/locales/ja.json
@@ -32,6 +32,9 @@
     "macOsIntel": "macOS (Intel) v0.2.0 ベータ版",
     "note": "※ ベータ版につき約30日間の使用期限があります。新しいバージョンをインストールすると期限が延長されます。"
   },
+  "history": {
+    "title": "更新履歴"
+  },
   "contact": {
     "title": "お問合せ",
     "email": "メールアドレス",
