--- a/templates/locales/ja.json
+++ b/templates/locales/ja.json
@@ -30,7 +30,7 @@
     "title": "ダウンロード (ベータ版)",
     "macOsAppleSilicon": "macOS (Appleシリコン)",
     "macOsIntel": "macOS (Intel)",
-    "note": "※ ベータ版につきリリース日から約200日程度の使用期限があります。新しいバージョンをインストールすると期限が延長されます。"
+    "note": "※ ベータ版はリリース日から約200日程度の使用期限があります。新しいバージョンをインストールすると期限が延長されます。"
   },
   "history": {
     "title": "更新履歴"
